--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "devDependencies": {
+    "elm-review": "^2.7.2",
     "elm-watch": "^1.0.0-beta.10"
   },
   "scripts": {
