Update package, install uglify-js

--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "dependencies": {
     "elm": "^0.19.1-5",
     "elm-format": "^0.8.5",
-    "elm-test": "^0.19.1-revision7"
+    "elm-test": "^0.19.1-revision7",
+    "uglify-js": "^3.17.4"
   },
   "name": "Jug puzzle",
   "version": "1.0.0",
