--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "elm-watch": "^1.0.0-beta.10"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "uglify": "uglifyjs dist/app.js --compress 'pure_funcs=[F2,F3,F4,F5,F6,F7,F8,F9,A2,A3,A4,A5,A6,A7,A8,A9],pure_getters,keep_fargs=false,unsafe_comps,unsafe' | uglifyjs --mangle --output dist/app.min.js && rm dist/app.js"
   },
   "keywords": [],
   "author": "",
